# scalar-convert

./: .travis.yml  README.md  scalar-convert.cabal  scalar-export.cabal  stack.yaml
app/: Main.hs
src/Text/: Scalar.hs
src/Text/Pandoc/Readers/: Scalar.hs
src/Text/Scalar/: CLI.hs  RDF.hs  Types.hs
test/: Examples.hs
test/Text/: ScalarSpec.hs
test/Text/Pandoc/Readers/: ScalarSpec.hs
test/Text/Scalar/: RDFSpec.hs
test/examples/: full_book.xml  single_page.xml
