name:                scalar-convert
version:             0.2.1
synopsis:            Parser for ANVC Scalar's RDF/XML, enabling export via Pandoc
description:         Please see README.md
homepage:            https://github.com/corajr/scalar-convert#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          cora.johnson.roberson@gmail.com
copyright:           2016 Cora Johnson-Roberson
category:            Web
build-type:          Simple
extra-source-files:  test/examples/*.xml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Scalar
                     , Text.Scalar.CLI
                     , Text.Scalar.RDF
                     , Text.Scalar.Types
                     , Text.Pandoc.Readers.Scalar
  build-depends:       base >= 4.7 && < 5
                     , rdf4h
                     , text
                     , regex-pcre-builtin
                     , containers
                     , optparse-applicative
                     , data-default
                     , mtl
                     , transformers
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010

executable scalar-convert
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scalar-convert
  default-language:    Haskell2010

test-suite scalar-convert-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scalar-convert
                     , rdf4h
                     , pandoc
                     , bytestring
                     , file-embed
                     , containers
                     , text
                     , pandoc-types
                     , data-default
                     , hspec
                     , QuickCheck
  other-modules:     Examples
                   , Text.Pandoc.Readers.ScalarSpec
                   , Text.ScalarSpec
                   , Text.Scalar.RDFSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/scalar-convert
