name:                scalar-export
version:             0.1.0.0
synopsis:            Parser for ANVC Scalar's RDF/XML, with export via Pandoc
description:         Please see README.md
homepage:            https://github.com/corajr/scalar-export#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          cora.johnson.roberson@gmail.com
copyright:           2016 Cora Johnson-Roberson
category:            Web
build-type:          Simple
extra-source-files:  test/examples/*.xml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Scalar
                     , Text.Scalar.CLI
                     , Text.Pandoc.Readers.Scalar
  build-depends:       base >= 4.7 && < 5
                     , rdf4h
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010

executable scalar-export
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scalar-export
  default-language:    Haskell2010

test-suite scalar-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scalar-export
                     , rdf4h
                     , pandoc
                     , bytestring
                     , file-embed
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/scalar-export
